# GPlayer

./: .gitignore  .gitmodules  LICENSE  README.md
Client/: GPlayer.sln
Client/GPlayer/: CHANGELOG.md  CMakeLists.txt  CountWord.py  GtooPlayer.qrc  GtooPlayer.vcxproj  GtooPlayer.vcxproj.filters  README.md  autobuild.sh  input.txt.word  input2.txt.word  msbuild.ps1  ouput.txt.word  resource.h  sleep_error.json  sleep_only.csv
Client/GPlayer/doc/App/: 1_RemWordReadMe.md  2_Clock.md  3_XiaomiWatchDisplay.md
Client/GPlayer/doc/Main/: GPlayer.md  GPlayerLog.md  GPlayerServer.md  NameNote.md  ThirdPartyRepository.md  Tool.md  Unittest.md
Client/GPlayer/include/: About.h  GPlayer.h  GtooLogger.h  GtooPlayer.h  PlayImage.h  PlayList.h  ReadThread.h  VideoCtrl.h  global.h
Client/GPlayer/lib/: lib.txt
Client/GPlayer/src/: About.cpp  GtooPlayer.cpp  PlayImage.cpp  PlayList.cpp  ReadThread.cpp  ReadThread.h  VideoCtrl.cpp  VideoDecode.cpp  VoiceDecode.cpp  main.cpp
Client/GPlayer/src/Player/VideoPlay/: ReadThread.cpp  ReadThread.h  VideoDecode.cpp  VideoDecode.h  VoiceDecode.cpp  VoiceDecode.h
Client/GPlayer/src/Player/Wdg/: GPlayer.cpp  GtooLogger.cpp  PlayImage.cpp  PlayList.cpp  TestFunc.cpp  VideoCtrl.cpp
Client/GPlayer/src/SmallApp/Clock/: ClockCfg.json  ClockConfig.cpp  ClockConfig.h  ClockSetWdg.cpp  ClockSetWdg.h  ClockSetWdg.ui  ClockWdg.cpp  ClockWdg.h  ClockWdg.ui  Stopwatch.qrc  StopwatchClockWdg.cpp  StopwatchClockWdg.h  StopwatchClockWdg.ui  StopwatchSetShortKey.cpp  StopwatchSetShortKey.h  StopwatchSetShortKey.ui  StopwatchSetWdg.cpp  StopwatchSetWdg.h  StopwatchSetWdg.ui  StopwatchWdg.cpp  StopwatchWdg.h  StopwatchWdg.ui
Client/GPlayer/src/SmallApp/RemWord/: GUtils.cpp  GUtils.h  RemWordExWdg.cpp  RemWordExWdg.h  RemWordExWdg.ui  RemWordListWdg.cpp  RemWordListWdg.h  RemWordListWdg.ui  RemWordRemWdg.cpp  RemWordRemWdg.h  RemWordRemWdg.ui  RemWordToolWdg.cpp  RemWordToolWdg.h  RemWordToolWdg.ui  RemWordWdg.cpp  RemWordWdg.h  RemWordWdg.ui  WordImport.cpp  WordSql.cpp  WordSql.h  WordTranform.cpp  WrtSglWdg.cpp  WrtSglWdg.h  WrtSglWdg.ui
Client/GPlayer/src/SmallApp/RemWord/DailyWords/20241217/: ouput.txt.word
Client/GPlayer/src/SmallApp/XiaomiWatchDisplay/: XiaomiWatchDisplayWdg.cpp  XiaomiWatchDisplayWdg.h  XiaomiWatchDisplayWdg.ui
Client/GPlayer/test/: TestReadThread.cpp
Client/GPlayer/ui/: About.ui  GPlayer.ui  GtooPlayer.ui  PlayList.ui  VideoCtrl.ui
Client/GPlayerRemote/: README.md
Client/GPlayerUnittest/: .clang-format  GPlayerUnittest.cpp  GPlayerUnittest.vcxproj  GPlayerUnittest.vcxproj.filters
Client/GPlayerUnittest/src/SmallApp/RemWord/: TestWordSql.cpp
Server/GPlayerServer/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  auto_build.sh
Server/GPlayerServer/config/: GPlayerServerConfig.json
Server/GPlayerServer/doc/: ArchitectureDesign.md  PIGG_build_log.md  PIGG_konw.md  shenchanzhe.md
Server/GPlayerServer/include/: BlockQueue.h  Config.h  Http.h  Lock.h  Webserver.h
Server/GPlayerServer/scripts/internal/: analyze_func.sh  auto_clean.sh  build_run.sh  color_config.sh
Server/GPlayerServer/src/: Config.cpp  Http.cpp  HttpRead.cpp  HttpWrite.cpp  Log.cpp  LstTimer.cpp  Main.cpp  PIGG_webserver.cpp  Webserver.cpp  main.cpp
Server/GPlayerServer/src/CGImysql/: sql_connection_pool.cpp
Server/GPlayerServer/src/GPlayerServer/: CMakeLists.txt
Server/GPlayerServer/src/GPlayerServer/demo/: PIGG_test_callback.cpp  PIGG_test_pthread.cpp  PIGG_test_redis.cpp
Server/GPlayerServer/src/GPlayerServer/demo/threadpool/: TaskQueue.cpp  ThreadPool.cpp
Server/GPlayerServer/src/GPlayerServer/include/: Logger.h  LstTimer.h  SqlConnPool.h  ThreadPool.h
Server/GPlayerServer/src/GPlayerServer/server/: Http.cpp  HttpWrite.cpp  Main.cpp  SqlConnPool.cpp
Server/GPlayerServer/src/GXCodec/: CMakeLists.txt
Server/GPlayerServer/src/GXCodec/ffmpeg_wrapper/: FFmpegDecoder.cpp
Server/GPlayerServer/src/GXCodec/gxcodec_manager/: GXCodecManager.cpp  GXCodecTask.cpp  main.cpp
Server/GPlayerServer/src/GXCodec/include/: FFmpegDecoder.h  GXCodecLogger.h  GXCodecManager.h  GXCodecTask.h  MediaProfiler.h  TranscodingManager.h  TranscodingTask.h  Version.h  global.h  video_decode.h
Server/GPlayerServer/src/GXCodec/transcoding_manager/: TranscodingManager.cpp  main.cpp
Server/GPlayerServer/src/GXCodec/utils/: MediaProfiler.cpp
Server/GPlayerServer/src/PIGG_config/: PIGG_config.cpp
Server/GPlayerServer/src/PIGG_http/: PIGG_http.cpp  PIGG_http_read.cpp  PIGG_http_write.cpp
Server/GPlayerServer/src/PIGG_log/: PIGG_log.cpp
Server/GPlayerServer/src/PIGG_test/: PIGG_test.cpp  PIGG_test.h  PIGG_test_json.cpp  PIGG_test_redis.cpp  algorithm_util.h
Server/GPlayerServer/src/PIGG_test/threadpool/: test.cpp
Server/GPlayerServer/src/PIGG_timer/: PIGG_lst_timer.cpp
Server/GPlayerServer/test/GoogleTestLearn/demo1/: demo1_unitest.cpp
